# AoC

./: .gitignore  AdventOfCode.sln  LICENSE.md  README.md  adventofcode2018.sln  run.sh
.github/workflows/: cargo.yaml  cmake.yaml  cmake22.yaml  dotnet.yaml  go.yaml  maven.yml  python.yaml
AdventOfCode2018/: AdventOfCode2018.csproj  Day1.cs  Day12Input.txt  Day15.cs  Day15Sample2.txt  Day16.cs  Day16.txt  Day17.cs  Day19.cs  Day19Task2.cs  Day1Test.cs  Day20.cs  Day20.txt  Day21.cs  Day22.cs  Day23.cs  Day24.cs  Day2Input.txt  Day3.cs  Day3Test.cs  Day5.cs  Day7Sample.txt  Day8Test.cs  Main.cs
AdventOfCode2018.Tests/: AdventOfCode2018.Tests.csproj  App.cs  Day10.cs  Day11.cs  Day12.cs  Day12Sample.txt  Day13.cs  Day13Input.txt  Day13Sample2.txt  Day14.cs  Day15.cs  Day15Sample3.txt  Day16.cs  Day17.cs  Day17.txt  Day18.cs  Day19.cs  Day1Test.cs  Day2.cs  Day24.cs  Day25.cs  Day2Test.cs  Day5.cs  Day5Test.cs  Day6Test.cs  Day7Test.cs  Day8Input.txt  Day8Test.cs  Day9Test.cs
AdventOfCode2018.Tests/AoC17/: AoC17Day03.cs
AoC15/: CMakeLists.txt  Dockerfile  run.sh
AoC15/01/: CMakeLists.txt  day.cpp  day01.cpp
AoC15/02/: CMakeLists.txt  day.cpp  day02.cpp
AoC15/03/: day.cpp
AoC15/04/: 04.csproj  04.sln  AoC15.csproj  Day04.cs  UnitTest1.cs
AoC15/05/: CMakeLists.txt  day.cpp
AoC15/06/: day.cpp
AoC15/07/: day.cpp
AoC15/08/: CMakeLists.txt  day.cpp
AoC15/09/: day.cpp
AoC15/10/: day.cpp
AoC15/11/: day.cpp
AoC15/12/: 12.csproj  Part2.cs  day.cpp
AoC15/13/: day.cpp
AoC15/14/: day.cpp
AoC15/15/: CMakeLists.txt  day.cpp
AoC15/16/: day.cpp
AoC15/17/: day.cpp
AoC15/18/: day.cpp
AoC15/19/: day.cpp
AoC15/20/: day.cpp  prime.txt
AoC15/21/: day.cpp
AoC15/22/: day.cpp
AoC15/23/: day.cpp
AoC15/24/: day.cpp
AoC15/25/: day.cpp
AoC16/: Dockerfile  build.gradle  pom.xml  run.sh
AoC17/: Day03.cs  Day04Input.txt  Day05.cs  Day05Input.txt  Dockerfile  README.md  run.sh
AoC17/c/: CMakeLists.txt  Dockerfile  day23.c  run.sh
AoC17/cpp/: CMakeLists.txt  day23.cpp
AoC17/cs/: AoC17.csproj  AoC17_cs.csproj  App.cs  Day03.cs  Day04.cs  Day05.cs
AoC17/fs/: AoC17.fsproj  Day07.fs
AoC17/rust/: Cargo.toml
AoC17/scala/: Dockerfile  build.sbt  run.sh
AoC18/: AoC18.csproj  AoC18.sln  App.cs  Day1.cs  Day11.cs  Day12.cs  Day13.cs  Day13Sample1.txt  Day14.cs  Day15.cs  Day15Input.txt  Day16.cs  Day17.cs  Day18.cs  Day19.cs  Day1Test.cs  Day2.cs  Day20.cs  Day22.cs  Day23.cs  Day24.cs  Day24.txt  Day25.cs  Day2Test.cs  Day3Test.cs  Day4.cs  Day4Sample.txt  Day4Test.cs  Day5Input.txt  Day5Test.cs  Day6Input.txt  Day6Test.cs  Day7Test.cs  Day8Test.cs  Day9.cs  Day9Test.cs  Dockerfile  run.sh
AoC18/Day01/: Day1.cs
AoC18/Day02/: Day2.cs
AoC18/Day03/: Day3.cs  input.txt
AoC18/Day04/: Day4.cs  input.txt
AoC18/Day05/: Day5.cs
AoC18/Day06/: Day6.cs  sample.txt
AoC18/Day07/: Day7.cs  input.txt
AoC18/Day08/: Day8.cs
AoC18/Day10/: Day10.cs  input.txt  sample.txt
AoC18/Day12/: Day12.cs
AoC18/Day13/: Day13.cs
AoC18/Day15/: Day15.cs  sample1.txt  sample4.txt
AoC18/Day16/: Day16.cs
AoC18/Day17/: Day17.cs  sample.txt
AoC18/Day18/: Day18.cs  input.txt
AoC18/Day19/: Day19.cs  input.txt  sample.txt
AoC18/Day20/: Day20.cs
AoC18/Day21/: Day21.cs
AoC18/Day22/: CostMap.cs  Day22.cs  Map.cs  ToolUtil.cs
AoC18/Day23/: Day23.cs  sample1.txt  sample2.txt
AoC18/Day24/: Day24.cs
AoC18/Day25/: Day25.cs  input.txt
AoC19/: AoC19.fsproj  Day01.fs  Day02.fs  Day03.fs  Day04.fs  Day05.fs  Day06.fs  Dockerfile  README.md  run.sh
AoC19/cpp/: CMakeLists.txt  README.md  common.cpp  common.h  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  intcode_computer.cpp  intcode_computer.h
AoC19/fs/: AoC19.fsproj  AoC19.sln  Day01.fs  Day02.fs  Day03.fs  Day04.fs  Day06.fs  Program.fs
AoC19/java/: README.md  pom.xml
AoC20/: CMakeLists.txt  Dockerfile  run.sh
AoC20/01/: day.cpp
AoC20/02/: day.cpp
AoC20/03/: day.cpp
AoC20/04/: day.cpp
AoC20/05/: CMakeLists.txt  day.cpp
AoC20/06/: day.cpp
AoC20/07/: day.cpp
AoC20/08/: day.cpp
AoC20/09/: day.cpp
AoC20/10/: day.cpp
AoC20/11/: day.cpp
AoC20/12/: day.cpp
AoC20/13/: day.cpp
AoC20/14/: day.cpp
AoC20/15/: day.cpp
AoC20/16/: day.cpp
AoC20/17/: day.cpp
AoC20/18/: day.cpp
AoC20/19/: day.cpp
AoC20/20/: CMakeLists.txt  day.cpp
AoC20/21/: day.cpp
AoC20/22/: day.cpp
AoC20/23/: day.cpp
AoC20/24/: day.cpp
AoC20/25/: day.cpp
AoC21/: AoC21.csproj  AoC21.sln  App.cs  Dockerfile  GlobalImport.cs  run.sh
AoC21/Day01/: Day01.cs
AoC21/Day02/: Day02.cs
AoC21/Day03/: Day03.cs
AoC21/Day04/: Day04.cs
AoC21/Day05/: Day05.cs
AoC21/Day06/: Day06.cs
AoC21/Day07/: Day07.cs
AoC21/Day08/: Day08.cs
AoC21/Day09/: Day09.cs
AoC21/Day10/: Day10.cs
AoC21/Day11/: Day11.cs
AoC21/Day12/: Day12.cs
AoC21/Day13/: Day13.cs
AoC21/Day14/: Day14.cs
AoC21/Day15/: CostMap.cs  Day15.cs
AoC21/Day16/: Day16.cs
AoC21/Day17/: Day17.cs
AoC21/Day18/: Day18.cs
AoC21/Day19/: Day19.cs
AoC21/Day20/: Day20.cs
AoC21/Day21/: Day21.cs
AoC21/Day22/: Day22.cs
AoC21/Day23/: Day23.cs
AoC21/Day24/: CMakeCache.txt  CMakeLists.txt  Day24.cs  Makefile  aoc21-day24  cmake_install.cmake  main.cpp
AoC21/Day25/: Day25.cs
AoC22/: Dockerfile  README.md  run.sh
AoC22/cpp/: CMakeLists.txt  Dockerfile  common-std.h  common.cpp  common.h  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day16.h  day16_test.cpp  day17.cpp  day18.cpp  day19.cpp  day19.h  day19_test.cpp  day20.cpp  day21.cpp  day22.cpp  day22.h  day22_test.cpp  day23.cpp  day24.cpp  day25.cpp  mini.sh  test.cpp
AoC22/cpp/mini/: CMakeLists.txt  README.md  main.cpp
AoC22/data/: 15.txt  18.txt
AoC23/: Dockerfile  README.md  run.sh
AoC23/data/: 10-3.txt  10-6.txt  10-7.txt  12-1.txt  14.txt  16.txt  25-1.txt
AoC23/go/: go.mod  (+2 more)
AoC24/: Dockerfile  README.md  run.sh
AoC25/: Dockerfile  README.md
Test/: Program.cs  Test.csproj
(+199 files in other folders)
