cmake_minimum_required(VERSION 3.10)

# set the project name
project(aoc21-day24)

set(CMAKE_CXX_STANDARD 20)

# speed
# set(CMAKE_BUILD_TYPE Release)
# set(CMAKE_CXX_FLAGS "-Wall -Wextra")
# set(CMAKE_CXX_FLAGS_DEBUG "-g")
# set(CMAKE_CXX_FLAGS_RELEASE "-O3")

# add the executable
add_executable(aoc21-day24 main.cpp)
